vaapih264dec: Produces `views=(int)2, ... multiview-mode=(string)mono` for single view (mono) media
Describe your issue
Expected Behavior
vaapih264dec should produce views=(int)1
for mono media
Observed Behavior
vaapih264dec produces views=(int)2
for mono media, which some sinks are silently ignoring, others reject (like nnstrwamer tensor_converter)
Setup
- Operating System: Ubuntu 22.04
- Device: Computer -->
- **GStreamer Version: 1.20.1 **
Steps to reproduce the bug
- open terminal
- THIS WORKS - type
GST_DEBUG=2 gst-launch-1.0 souphttpsrc location="https://storage.googleapis.com/ts-video-test/test1_vlog.mp4" ! qtdemux ! h264parse ! vaapih264dec ! vaapipostproc ! "video/x-raw,views=(int)2" ! videoconvert ! autovideosink
- THIS FAILS - type
GST_DEBUG=2 gst-launch-1.0 souphttpsrc location="https://storage.googleapis.com/ts-video-test/test1_vlog.mp4" ! qtdemux ! h264parse ! vaapih264dec ! vaapipostproc ! "video/x-raw,views=(int)1" ! videoconvert ! autovideosink
How reproducible is the bug?
Consistently
Screenshots if relevant
n/a
Solutions you have tried
I can provide a proposed patch to gstvaapidecoder_h264.c
Related non-duplicate issues
na
Additional Information
na